--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Parrainage Star Citizen — TON-PSEUDO</title>
+  <title>Parrainage Star Citizen — Ariku_Dono</title>
   <meta name="description" content="Utilise mon code de parrainage Star Citizen pour obtenir le bonus à la création du compte. Guide rapide + lien direct." />
   <link rel="canonical" href="https://TONPSEUDO.github.io/" />
 
   <!-- Open Graph (aperçu Discord / réseaux) -->
-  <meta property="og:title" content="Parrainage Star Citizen — TON-PSEUDO" />
+  <meta property="og:title" content="Parrainage Star Citizen — Ariku_Dono" />
   <meta property="og:description" content="Bonus de parrainage à l'inscription. Code + lien direct + guide ultra rapide." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://TONPSEUDO.github.io/" />
