--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Parrainage Star Citizen — Ariku_Dono" />
   <meta property="og:description" content="Bonus de parrainage à l'inscription. Code + lien direct + guide ultra rapide." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://TONPSEUDO.github.io/" />
+  <meta property="og:url" content="https://ArikuDon.github.io/" />
   <!-- Tu pourras ajouter og:image après (voir étape 2) -->
   <!-- <meta property="og:image" content="https://TONPSEUDO.github.io/og.jpg" /> -->
 
