--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
           <div class="codebox" role="group" aria-label="Code de parrainage">
             <div>
               <div class="tiny">Mon code :</div>
-              <div id="ref" class="code">TON-CODE-ICI</div>
+              <div id="ref" class="code">STAR-XT6P-PS2J</div>
             </div>
             <button class="copy" id="copyBtn" type="button">📋 Copier</button>
           </div>
 
           <div class="cta">
-            <a class="btn primary" id="enlistBtn" href="https://robertsspaceindustries.com/enlist?referral=TON-CODE-ICI" target="_blank" rel="noopener">
+            <a class="btn primary" id="enlistBtn" href="https://robertsspaceindustries.com/enlist?referral=STAR-XT6P-PS2J" target="_blank" rel="noopener">
               ✅ Créer un compte avec le code
             </a>
             <a class="btn" href="https://robertsspaceindustries.com/" target="_blank" rel="noopener">
@@ -337,11 +337,11 @@
             </div>
             <div class="step">
               <div class="num">2</div>
-              <p>Vérifie que le champ “Referral Code” contient bien <b>TON-CODE-ICI</b>.</p>
+              <p>Vérifie que le champ “Referral Code” contient bien <b>STAR-XT6P-PS2J</b>.</p>
             </div>
             <div class="step">
               <div class="num">3</div>
-              <p>Finalise l’inscription : tu reçois le bonus lié au programme (si actif).</p>
+              <p>Finalise l’inscription : tu reçois le bonus lié au programme, actuellement un bonus de 50.000 uec .</p>
             </div>
           </div>
 
@@ -367,7 +367,7 @@
     </section>
 
     <footer>
-      <div>© <span id="year"></span> TON-PSEUDO • Page de parrainage</div>
+      <div>© <span id="year"></span> Ariku_Dono • Page de parrainage</div>
       <div class="tiny">Cette page n’est pas affiliée officiellement à CIG/RSI.</div>
     </footer>
   </div>
