--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
   <title>Parrainage Star Citizen — Ariku_Dono</title>
   <meta name="description" content="Utilise mon code de parrainage Star Citizen pour obtenir le bonus à la création du compte. Guide rapide + lien direct." />
-  <link rel="canonical" href="https://arikudon.github.io/" />
+  <link rel="canonical" href="https://arikudon.github.io/StarCitizen/" />
 
   <!-- Open Graph (aperçu Discord / réseaux) -->
   <meta property="og:title" content="Parrainage Star Citizen — Ariku_Dono" />
   <meta property="og:description" content="Bonus de parrainage à l'inscription. Code + lien direct + guide ultra rapide." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://arikudon.github.io/" />
+  <meta property="og:url" content="https://arikudon.github.io/StarCitizen/" />
   <!-- Tu pourras ajouter og:image après (voir étape 2) -->
   <!-- <meta property="og:image" content="https://TONPSEUDO.github.io/og.jpg" /> -->
 
