--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
         <div class="title">
-          <h1>TON-PSEUDO</h1>
+          <h1>Ariku_Dono</h1>
           <p>Parrainage Star Citizen • landing page rapide</p>
         </div>
       </div>
