--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://arikudon.github.io/StarCitizen/" />
   <!-- Tu pourras ajouter og:image après (voir étape 2) -->
-  <!-- <meta property="og:image" content="https://TONPSEUDO.github.io/og.jpg" /> -->
+  <!-- <meta property="og:image" content="https://arikudon.github.io/og.jpg" /> -->
 
   <style>
     :root{
