--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Parrainage Star Citizen — Ariku_Dono</title>
   <meta name="description" content="Utilise mon code de parrainage Star Citizen pour obtenir le bonus à la création du compte. Guide rapide + lien direct." />
   <link rel="canonical" href="https://arikudon.github.io/StarCitizen/" />
+  <link rel="alternate" hreflang="fr" href="https://arikudon.github.io/StarCitizen/" />
+  <link rel="alternate" hreflang="en" href="https://arikudon.github.io/StarCitizen/en.html" />
 
   <!-- Open Graph (aperçu Discord / réseaux) -->
   <meta property="og:title" content="Parrainage Star Citizen — Ariku_Dono" />
@@ -292,6 +294,8 @@
         </div>
       </div>
       <nav class="toplinks">
+        <a class="chip" href="./">FR</a>
+        <a class="chip" href="en.html">EN</a>
         <a class="chip" href="#comment">Comment ça marche</a>
         <a class="chip" href="#faq">FAQ</a>
       </nav>
