--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
         <a class="chip" href="en.html">EN</a>
         <a class="chip" href="#comment">Comment ça marche</a>
         <a class="chip" href="#faq">FAQ</a>
+        <a class="chip" href="vr.html">VR</a>
       </nav>
     </header>
 
