--- a/en.html
+++ b/en.html
@@ -295,10 +295,11 @@
         </div>
       </div>
       <nav class="toplinks">
-        <a class="chip" href="#how">How it works</a>
-        <a class="chip" href="#faq">FAQ</a>
         <a class="chip" href="./">FR</a>
         <a class="chip" href="en.html">EN</a>
+        <a class="chip" href="#how">How it works</a>
+        <a class="chip" href="#faq">FAQ</a>
+        <a class="chip" href="vr.html">VR</a>
       </nav>
     </header>
 
