--- a/vr.html
+++ b/vr.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <title>Star Citizen VR — Guide immersion</title>
-<meta name="description" content="Guide VR simple : Vulkan obligatoire, Quest 3 + Virtual Desktop, Wi-Fi 7 sans latence et conseils immersion." />
+<meta name="description" content="Guide VR Star Citizen : activation officielle launcher, Vulkan obligatoire, Quest 3 Virtual Desktop et conseils immersion." />
 <link rel="canonical" href="https://arikudon.github.io/StarCitizen/vr.html" />
 
 <style>
@@ -42,6 +42,7 @@ padding:12px;
 border-radius:12px;
 background:rgba(255,255,255,.04);
 border:1px solid rgba(255,255,255,.1);
+line-height:1.5;
 }
 strong{color:white;}
 footer{text-align:center;margin-top:18px;font-size:12px;color:var(--muted);}
@@ -54,7 +55,7 @@ footer{text-align:center;margin-top:18px;font-size:12px;color:var(--muted);}
 <header>
 <div>
 <h2>🕶️ Star Citizen VR</h2>
-<div style="font-size:13px;color:var(--muted)">Guide immersion rapide</div>
+<div style="font-size:13px;color:var(--muted)">Guide immersion terrain</div>
 </div>
 <nav>
 <a class="chip" href="./">Referral</a>
@@ -64,37 +65,47 @@ footer{text-align:center;margin-top:18px;font-size:12px;color:var(--muted);}
 <div class="panel">
 
 <div class="step">
-<strong>1. Vulkan obligatoire</strong><br>
-Active Vulkan dans les options du jeu (et pas DirectX).  
-Sans Vulkan la VR indisponible.
+<strong>1. Activer la VR dans le launcher (nouveau patch)</strong><br>
+Ferme le jeu → ouvre le RSI Launcher → Settings → Games → sélectionne LIVE/PTU → active <strong>VR Support</strong>.<br>
+Une icône VR apparaît ensuite dans le launcher.
 </div>
 
 <div class="step">
-<strong>2. Quest 3 + Virtual Desktop</strong><br>
+<strong>2. Vulkan obligatoire</strong><br>
+Active Vulkan dans les options graphiques du jeu.  
+</div>
+
+<div class="step">
+<strong>3. Quest 3 + Virtual Desktop</strong><br>
 Lance Virtual Desktop puis démarre le jeu.  
-L’immersion est excellente en sans-fil avec un bon réseau.
+Le sans-fil offre une immersion excellente avec un réseau stable.
 </div>
 
 <div class="step">
-<strong>3. Désactiver le miroir PC</strong><br>
+<strong>4. Désactiver le miroir PC</strong><br>
 Ferme la fenêtre miroir SteamVR / VR sur le PC.  
 Elle consomme du GPU et peut provoquer du stutter inutile.
 </div>
 
 <div class="step">
-<strong>4. Wi-Fi 7 = latence quasi nulle</strong><br>
-Avec un routeur proche et un PC en Ethernet, le streaming devient très stable et proche d’une expérience filaire.
+<strong>5. Wi-Fi 7 = latence quasi nulle</strong><br>
+Avec un routeur proche et un PC en Ethernet, l’expérience devient très stable et proche du filaire.
 </div>
 
 <div class="step">
-<strong>5. Limitation VR → FPS</strong><br>
-Une fois en VR, la transition vers les phases FPS n’est pas idéale.  
-À garder en tête selon ton style de jeu.
+<strong>6. Limitation VR → FPS</strong><br>
+La transition vers les phases FPS reste moins confortable en VR.  
+À prendre en compte selon ton style de jeu.
 </div>
 
 <div class="step">
 <strong>Conclusion :</strong><br>
-Active Vulkan → lance Virtual Desktop → démarre le jeu → <strong>bim immersion totale</strong>.
+Active VR dans le launcher → Vulkan → Virtual Desktop → lance le jeu → <strong>bim immersion cockpit</strong>.
+</div>
+
+<div class="step">
+<strong>Note :</strong><br>
+La VR est encore expérimentale et évolue rapidement, mais l’immersion cockpit est déjà excellente.
 </div>
 
 </div>
