--- a/en.html
+++ b/en.html
@@ -299,7 +299,7 @@
         <a class="chip" href="en.html">EN</a>
         <a class="chip" href="#how">How it works</a>
         <a class="chip" href="#faq">FAQ</a>
-        <a class="chip" href="vr-en.html">EN</a>
+        <a class="chip" href="vr-en.html">VR</a>
       </nav>
     </header>
 
